# LLM-Tutor

./: .gitignore  LICENSE  README.md  pyproject.toml
Evaluation/Agent_first_test/LLM_log_output/only_human_message/: ergebnisse.md  lösung_ohne_schritt_1.txt  lösung_ohne_schritt_2.txt  lösung_ohne_schritt_3.txt  lösung_ohne_schritt_4.txt  lösung_ohne_schritt_6.txt  richige_Lösung.txt
Evaluation/Agent_first_test/LLM_log_output/system_and_human_messages/: ergebnisse.md  lösung_ohne_schritt_1.txt  lösung_ohne_schritt_2.txt  lösung_ohne_schritt_3.txt  lösung_ohne_schritt_4.txt  lösung_ohne_schritt_6.txt  richtige_Lösung.txt  vorgehensweise.md
Evaluation/java_aufgaben/: aufgaben.md
Evaluation/java_aufgaben/musterlösung_&_keineLösung/gpt-4.1/: blatt-03.pdf.txt  (+3 more)
Evaluation/java_aufgaben/musterlösung_&lösung_20%/: Qualität_kriterien.md
Evaluation/python_aufgaben/musterlösung_&_lösung_20%/: Qualität_kriterien.md  vorbereitung.md
data/Java/keine_solution/: HashTableChaining.java  InsertionSort.java  LinkedList.java  SearchTree.java
data/Java/sample_solution/: HashTableChaining.java  InsertionSort.java  LinkedList.java  SearchTree.java
data/Java/student_solution/: HashTableChaining.java  InsertionSort.java  LinkedList.java  SearchTree.java
data/python/sample_solution/: computer.py  removeSlice.py
data/python/student_solution/: computer.py  pizza.py  removeSlice.py
src/: chatbot.py  common.py  evalutation_code.py  llm_output.html  main.py  praktomat_entry.py  test.ipynb
src/config/locations/: __init__.py  paths.py
src/config/meta_config/: __init__.py  meta.py
(+50 files in other folders)
