[project]
name = "tutor-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "langsmith>=0.4.32",
    "markdown>=3.9",
    "pypdf>=6.1.1",
    "pypdf2>=3.0.1",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.15",
]
